<resources>
    <string name="app_name">Event Manager</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add_new_event">Add new Event</string>
    <string name="title">Title</string>
    <string name="date">date</string>
    <string name="description">Description</string>
    <string name="create_event">Create Event</string>
    <string name="update_event">Update Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="register_here">Don\'t have a account ? Register here</string>
    <string name="have_an_account">Have an account already? Login</string>
</resources>
